Added version 5.8.2978